@@ -1,3 +1,12 @@
+2009-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Port.cpp: if a port is sending data,
+	give it a chance to finish before closing (thanks to Pablo
+	Urcola for pointing out this issue).
+
+	* src/libYARP_OS/include/yarp/os/BufferedPort.h: implement
+	isWriting() method, like yarp::os::Port::isWriting
+
 2009-05-25 Lorenzo Natale <nat@liralab.it>
 	* src/YARP_dev/include/yarp/dev/Attachable.h removed
 	* src/libYARP_dev/include/yarp/dev/Wrapper.h:
